--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="container">
+        <main class="container" role="main">
             <img class="qr-code" src="images/image-qr-code.png" alt="qr code" />
             <h1 class="primary-heading">Improve your front-end skills by building projects</h1>
             <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-        </div>
+        </main>
     </body>
 </html>
